# umx 1.2.7
* ADDED: umx_get_OpenMx (download parallel version of OpenMx)
* CHANGE: umx_scale_wide_twin_data argument names for consistency: "suffix" "data"
* CHANGE: umx_residualize() ditto
* IMPROVED: umx_CI() more flexible, now allows removing CIs
* IMPROVED: umx_time handling of no input arguments
* IMPROVED: umx_cont_2_quantile()
* IMPROVED: umx_pb_note() better feedback and setup
* IMPROVED: loadings() generic
* UPDATE: Readme.md

# umx 1.2.5
* April 2016 bug fix release
* FIX: $models bug in umxStandardizeACE
* EXPAND: test suite

# umx 1.2.0
* April 2016 R 3.2.4 Very Secure Dishes edition
* NEW: Plot using DiagrammeR!
* NEW: Choose plot format!
 * umx_set_plot_format("DiagrammeR")
 * umx_set_plot_format("graphviz")
* NEW: Choose table format!
 * umx_set_table_format("markdown")
 * umx_set_table_format("latex")
* NEW: set plotting by default: umx_set_auto_plot(TRUE) 
* NEW: EFA! with umxEFA() (exploratory factor analysis is beta!)
* NEW loadings() support for umxEFA
* CHANGE:  .dot --> .gv suffix for plotting (more compatible)
* CHANGE: To $ from @ accessors for OpenMx compression compatibility
* BETTER: Help! ACECov figure, ... many other improvements
* ENHANCED: umx_print, umx_show, umxCompare
* REQUIRE knitr, DiagrammeR
* INCREASE minimum R / OpenMx to  >= 3.2.0 / >= 2.5.0

# umx 1.1.5
* March 2016 Boulder Workshop feedback updates
* NEW: plot() now works on Windows and Unix as well as OS X! (h/t @mhunter)
* CHANGE: umxReRun to umxModify (h/t @hmaes)
* BETTER: compatibility with OpenMx 2.5.2

# umx 1.1.1
* Feb 2016 R 3.2.3 Wooden Christmas Tree edition
* NEW: auto-run now the default for all models!
	* Added option to switch this: options("umx_auto_run" = TRUE)
* NEW: plot should generate pdfs for Windows and Unix users now
* NEW: umxACEcov support for ACE with covariates
* NEW: umx_make_TwinData added to support simulation studies
* BETTER: umx_check_parallel now returns timing information
* BETTER: umx_time now supports "start" and "stop")