@@ -2564,28 +2564,36 @@ umx_reorder <- function(old, newOrder) {
 #' x = umx_cont_2_quantiles(rep(0:10, 10))
 #' x = umx_cont_2_quantiles(rbinom(10000, 1, .5))
 #' str(umx_cont_2_quantiles(rnorm(10000), nlevels = 4, verbose = TRUE))
-umx_cont_2_quantiles <- function(var, nlevels = 10, type = c("mxFactor", "ordered", "unordered"), verbose = FALSE){
-	type = match.arg(type)	
-	# TODO: check if dim[2]<1, and if so, proceed columnwise
-	myBreaks = quantile(var, seq(0, 1, by = 1/nlevels), type = 8, na.rm = TRUE)
-	myBreaks[1] = -Inf
-	myBreaks[length(myBreaks)] = Inf
-	myBreaks = unique(myBreaks)
-    myLabels = c(myBreaks[2:(length(myBreaks)-1)], max(var))
-	# myBreaks = myBreaks[2:(length(myBreaks)-1)] # trim ends
-	if(type == "mxFactor"){
-		out = cut(var, breaks = myBreaks, labels = myLabels, ordered_result = TRUE); 
-		out = mxFactor(out, levels = myLabels)
-	} else if (type=="ordered") {
-		out = cut(var, breaks = myBreaks, labels = myLabels, ordered_result = TRUE); 		
+umx_cont_2_quantiles <- function(x, nlevels = 10, type = c("mxFactor", "ordered", "unordered"), verbose = FALSE){
+	type = match.arg(type)
+	# TODO: check if is.data.frame(x) && dim(x)[2] > 1, and if so, proceed columnwise
+	if(is.data.frame(x) && dim(x)[2] > 1){
+		stop("Can't handle multiple column actions yet: email tim and rip him a new one")
 	} else {
-		out = cut(var, breaks = myBreaks, labels = myLabels); 
-	}
+		if(!is.numeric(x) ){
+			stop("This is for continous variables. you gave me a ", typeof(x))
+		} else {
+			myBreaks = quantile(x, seq(0, 1, by = 1/nlevels), type = 8, na.rm = TRUE)
+			myBreaks[1] = -Inf
+			myBreaks[length(myBreaks)] = Inf
+			myBreaks = unique(myBreaks)
+		    myLabels = c(myBreaks[2:(length(myBreaks)-1)], max(x))
+			# myBreaks = myBreaks[2:(length(myBreaks)-1)] # trim ends
+			if(type == "mxFactor"){
+				out = cut(x, breaks = myBreaks, labels = myLabels, ordered_result = TRUE); 
+				out = mxFactor(out, levels = myLabels)
+			} else if (type=="ordered") {
+				out = cut(x, breaks = myBreaks, labels = myLabels, ordered_result = TRUE); 		
+			} else {
+				out = cut(x, breaks = myBreaks, labels = myLabels); 
+			}
 	
-	if(verbose){
-		message("Scores ranged from ", min(var), " to ", max(var), ". Cuts made at ", omxQuotes(myBreaks))
+			if(verbose){
+				message("Scores ranged from ", min(x), " to ", max(x), ". Cuts made at ", omxQuotes(myBreaks))
+			}
+			return(out)
+		}
 	}
-	return(out)
 }
 
 #' umx_has_square_brackets
