@@ -3,8 +3,10 @@
 * CHANGE: umx_scale_wide_twin_data argument names for consistency: "suffix" "data"
 * CHANGE: umx_residualize() ditto
 * IMPROVED: umx_CI() more flexible, now allows removing CIs
+  * Old code will break: replace "add" with "which"
 * IMPROVED: umx_time handling of no input arguments
 * IMPROVED: umx_cont_2_quantile()
+  * Old code will break: replace umx_cont_2_ordinal with umx_cont_2_quantile
 * IMPROVED: umx_pb_note() better feedback and setup
 * IMPROVED: loadings() generic
 * UPDATE: Readme.md
